# Auth/src/main/java/com/piotr/matrix/auth/entity/LoginEntity.java
@@ -1,16 +1,0 @@
-package com.piotr.matrix.auth.entity;
-
-import jakarta.persistence.Entity;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
-import lombok.Getter;
-
-@Entity
-@Table(name = "user_login")
-@Getter
-public class LoginEntity {
-    @Id
-    private String email;
-    private String password;
-    private String role;
-}
