# User/src/main/resources/userOpenApi.yaml
@@ -208,117 +208,19 @@ paths:
           description: Server error
 components:
   schemas:
-    Role:
-      type: string
-      enum:
-        - master
-        - admin
-        - user
-    Email:
-      type: object
-      required:
-        - email
-      properties:
-        email:
-          type: string
-          format: email
-    User:
-      type: object
-      required:
-        - firstName
-        - lastName
-        - email
-        - role
-      properties:
-        firstName:
-          type: string
-          minLength: 2
-          maxLength: 20
-        lastName:
-          type: string
-          minLength: 2
-          maxLength: 20
-        email:
-          type: string
-          format: email
-        role:
-          $ref: '#/components/schemas/Role'
-    UserProfile:
-      type: object
-      required:
-        - id
-        - user
-        - createdAt
-      properties:
-        id:
-          type: string
-          format: uuid
-        user:
-          $ref: '#/components/schemas/User'
-        createdAt:
-          type: string
-          format: date-time
-    UserRegistration:
-      type: object
-      required:
-        - user
-      properties:
-        user:
-          $ref: '#/components/schemas/User'
-        password:
-          type: string
-          format: password
     UserUpdate:
-      type: object
-      properties:
-        user:
-          $ref: '#/components/schemas/User'
-    UserPasswordRequest:
-      type: object
-      required:
-        - oldPassword
-        - newPassword
-      properties:
-        oldPassword:
-          type: string
-          minLength: 8
-          format: password
-        newPassword:
-          type: string
-          minLength: 8
-          format: password
-    UserEmailRequest:
-      type: object
-      required:
-        - oldEmail
-        - newEmail
-      properties:
-        oldEmail:
-          type: string
-          minLength: 6
-          format: email
-        newEmail:
-          type: string
-          minLength: 6
-          format: email
-    UserRoleRequest:
-      type: object
-      required:
-        - oldRole
-        - newRole
-      properties:
-        oldRole:
-          $ref: '#/components/schemas/Role'
-        newRole:
-          $ref: '#/components/schemas/Role'
+      $ref: '../../../../ms-models/src/main/resources/common-api.yaml#/components/schemas/UserUpdate'
+    UserRegistration:
+      $ref: '../../../../ms-models/src/main/resources/common-api.yaml#/components/schemas/UserRegistration'
+    Email:
+      $ref: '../../../../ms-models/src/main/resources/common-api.yaml#/components/schemas/Email'
     UserLoginResponse:
-      type: object
-      required:
-        - password
-        - role
-      properties:
-        password:
-          type: string
-          format: password
-        role:
-          $ref: '#/components/schemas/Role'
+      $ref: '../../../../ms-models/src/main/resources/common-api.yaml#/components/schemas/UserLoginResponse'
+    UserPasswordRequest:
+      $ref: '../../../../ms-models/src/main/resources/common-api.yaml#/components/schemas/UserPasswordRequest'
+    UserEmailRequest:
+      $ref: '../../../../ms-models/src/main/resources/common-api.yaml#/components/schemas/UserEmailRequest'
+    UserRoleRequest:
+      $ref: '../../../../ms-models/src/main/resources/common-api.yaml#/components/schemas/UserRoleRequest'
+    UserProfile:
+      $ref: '../../../../ms-models/src/main/resources/common-api.yaml#/components/schemas/UserProfile'
